--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "user-info",
     "stalker"
   ],
-  "author": "YanzXploit",
+  "author": "gimmesome_chips$1",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.12.2"
@@ -23,3 +23,4 @@
     "node": ">=14.0.0"
   }
 }
+
